# giggle

./: .gitignore  AGENTS.md  README.md  README_JA.md  eplus_api_sample.json  find_all_ids.py  find_id.py  main.py  pyproject.toml  reverify_pia_output.txt  run_logs.txt  run_logs_final.txt  supabase_schema.sql  update_schema.sql
.github/workflows/: ingest.yml
frontend/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EventCard.tsx  Feed.tsx  LanguageContext.tsx  Navbar.tsx  ThemeToggle.tsx
frontend/components/layout/: Navbar.tsx
frontend/components/providers/: LanguageContext.tsx
frontend/components/ui/: Modal.tsx  ThemeToggle.tsx  Tooltip.tsx  TooltippedLink.tsx  TruncatedText.tsx
frontend/lib/: eventUtils.ts  groupEvents.ts  prefectures.js  prefectures.ts  spotify.ts  stringUtils.ts  supabase-server.ts  supabase.ts  timezoneUtils.js  timezoneUtils.ts
frontend/types/: event.ts  next-auth.d.ts
frontend/utils/: eventUtils.ts  groupEvents.ts  prefectures.ts
ingestion/: .env.example  __init__.py  db.py  japan_metro_ids.json  main.py  migrate_time_column.py  models.py  pyproject.toml  standardizer.py
ingestion/connectors/: bandsintown.py  base.py  eplus.py  kaala.py  pia.py  registry.py  resident_advisor.py  seated.py  seatgeek.py  songkick.py  ticketmaster.py  tokyo_cheapo.py
ingestion/data/: japan_metros.json
ingestion/services/: importer.py  standardizer.py
ingestion/utils/: config.py  dates.py  db.py  locations.py  text.py  timezone.py
(+4 files in other folders)
