[project]
name = "ingestion"
version = "0.1.0"
description = "Giggle event ingestion pipeline"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "tenacity>=8.2.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.0",
    "tzdata>=2025.3",
    "pytz>=2025.2",
    "geopy>=2.4.1",
    "timezonefinder>=8.2.1",
]

[tool.uv]
dev-dependencies = []
